# cocktail_api

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: exceptions.py  main.py
app/db/: connection.py
app/repositories/: cocktail_repository.py  ingredient_repository.py  stats_repository.py
app/routers/: cocktails.py  ingredients.py  stats.py
app/schemas/: cocktail.py  ingredient.py  stats.py
app/services/: cocktail_service.py  ingredient_service.py  stats_service.py
tests/: conftest.py  test_cocktails.py  test_database_errors.py  test_health.py  test_ingredients.py  test_stats.py  test_validation.py
tests/services/: test_cocktail_service.py  test_ingredient_service.py  test_stats_service.py
