[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cocktail-api"
version = "0.1.0"
description = "Read-only FastAPI service for cocktail recipes"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]",
    "psycopg[binary]",
    "python-dotenv",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.fastapi]
entrypoint = "app.main:app"